--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "Leo Ss",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.6.5",
+    "sequelize": "^6.35.2"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
