--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "mysql2": "^3.6.5",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "slug": "^8.2.3"
   },
   "devDependencies": {
     "dotenv": "^16.3.1"
