--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-validator": "^7.0.1",
     "mysql2": "^3.6.5",
     "sequelize": "^6.35.2",
+    "shortid": "^2.2.16",
     "slug": "^8.2.3"
   },
   "devDependencies": {
