--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Leo Ss",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "mysql2": "^3.6.5",
