--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Leo Ss",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.0",
     "bcrypt-nodejs": "^0.0.3",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
