--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sendgrid/mail": "8.1.0",
     "bcrypt-nodejs": "0.0.3",
+    "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "express": "4.18.2",
